# r4

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
baselines/: __init__.py  biomarker_ranking.py  config.yaml  data_loader.py  drug_sensitivity.py  evaluation.py  experiment_tracker.py  pathway_dysregulation.py  run_baselines.py  survival_analysis.py
baselines/tests/: test_baselines.py
configs/: autotune.json  base.json  base_config.yaml  best_trial.json  cohort.json  evaluate.json  features.json  ingest.json  interpret.json  report.json  search_spaces.yaml  train.json
data_pipeline/: __init__.py  ingest.py  missingness.py  normalization.py  pathway_aggregation.py  quality_report.py  uniprot_mapping.py
data_pipeline/tests/: test_pipeline.py
depmap_benchmark/: __init__.py  benchmark_definition.py  cell_line_profiles.py  config.yaml  depmap_loader.py  drug_target_validation.py  leaderboard.py  mm_pathway_oracle.py  patient_cellline_bridge.py  run_benchmark.py
depmap_benchmark/tests/: test_benchmark.py
graph_ml/: __init__.py  config.yaml  drug_encoder.py  evaluate.py  fusion_model.py  gnn_models.py  hyperparameter_search.py  proteomics_encoder.py  run_graph_ml.py  training.py
graph_ml/tests/: test_graph_ml.py
orchestration/: Apptainer.def  Dockerfile  Snakefile  __init__.py  agentic_tuning.py  cli.py  docker-entrypoint.sh  dvc_setup.sh  mlflow_config.py  parallel_compute.py  reproducibility.py
pipeline4/: __init__.py  __main__.py
results/: fairness.json  metrics.json  model_comparison.csv  pipeline_summary.json  report.html
scripts/: download_data.py  setup.sh
tests/: conftest.py  test_checkpoint.py  test_config.py  test_evaluate.py  test_models.py
(+54 files in other folders)
