[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r4-mm-clinical"
version = "0.1.0"
description = "Multi-Modal Clinical Outcome Prediction for Multiple Myeloma"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Abhignya Jagathpally"},
]
keywords = [
    "survival-analysis", "multiple-myeloma", "clinical-ai",
    "multi-modal-fusion", "biomarker-discovery",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.5.0",
    "anndata>=0.10.0",
    "scanpy>=1.9.3",
    "pyarrow>=12.0.0",
    "lifelines>=0.27.0",
    "scikit-survival>=0.22.0",
    "torch>=2.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "shap>=0.43.0",
    "GEOparse>=2.0.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "mlflow>=2.11.0",
    "optuna>=3.5.0",
    "tqdm>=4.65.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
r4 = "main:main"

[tool.setuptools]
packages = ["pipeline4", "pipeline4.config", "pipeline4.checkpoint",
            "pipeline4.stages", "pipeline4.models", "pipeline4.evaluation",
            "pipeline4.interpretation", "pipeline4.data", "pipeline4.tracking",
            "pipeline4.utils", "pipeline4.reporting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
